ya funciona el flujo del juego bien creo